--- a/ama-order-system-front/package.json
+++ b/ama-order-system-front/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vite --port 5174 --mode test"
   },
   "dependencies": {
     "react": "^19.2.0",
