--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "PORT=3004 nodemon index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
