--- a/ama-order-system-front/package.json
+++ b/ama-order-system-front/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vite --port 5174 --mode test"
+    "test": "vite --port 5174 --mode test",
+    "prod": "vite preview --port 5173 --host"
   },
   "dependencies": {
     "react": "^19.2.0",
